<resources>
    <string name="app_name">Arka Android Two</string>
    <string name="hello_world">HELLO WORLD!</string>
    <string name="activity_one">Activity One</string>
    <string name="to_activity_one">To Activity One</string>
    <string name="activity_two">Activity Two</string>
    <string name="to_activity_two">To Activity Two</string>
    <string name="three_activity">Three Activity</string>
    <string name="to_activity_three">To Activity Three</string>
    <string name="back">Back</string>
    <string name="biodata_pribadi">BIODATA PRIBADI</string>
    <string name="full_name">Full name</string>
    <string name="address">Address</string>
    <string name="dob">DOB</string>
    <string name="submit">Submit</string>
    <string name="to_linear_layout">To Linear Layout</string>
    <string name="backdrop">BACKDROP</string>
    <string name="click_me">CLICK ME!</string>
    <string name="city">City</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="note">Note</string>
    <string name="type">Type</string>
    <string name="to_activity_toolbar">To Activity Toolbar</string>
    <string name="content">Content</string>
    <string name="to_dialog_activity">To Dialog Activity</string>
    <string name="to_tab_layout_activity">To Tab Layout Activity</string>
    <string name="to_webview_activity">To Webview Activity</string>
    <string name="to_recyclerview_activity">To RecyclerView Activity</string>
    <string name="to_shared_pref">To Shared Pref</string>
    <string name="to_word_activity">To Word Activity</string>
    <string name="to_project_retrofit">To Project Retrofit</string>
    <string name="to_login_activity">To Login Activity</string>
    <string name="to_add_project">To Add Project</string>
</resources>