<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".RelativeActivity">

    <TextView
        android:id="@+id/tv_title"
        android:text="@string/biodata_pribadi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"/>


    <EditText
        android:id="@+id/et_fullname"
        android:hint="@string/full_name"
        android:layout_below="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_city"
        android:text="@string/city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_fullname"
        android:layout_marginRight="10dp"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/et_dob"
        android:layout_marginEnd="10dp" />

    <EditText
        android:id="@+id/et_dob"
        android:hint="@string/dob"
        android:layout_below="@+id/et_fullname"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_dob"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>